Add methods to redirect a user if they are authenticated

--- a/railties/lib/rails/generators/rails/authentication/templates/app/controllers/concerns/authentication.rb.tt
+++ b/railties/lib/rails/generators/rails/authentication/templates/app/controllers/concerns/authentication.rb.tt
@@ -10,6 +10,10 @@ module Authentication
     def allow_unauthenticated_access(**options)
       skip_before_action :require_authentication, **options
     end
+
+    def redirect_if_authenticated(**options)
+      before_action :require_unauthenticated_user, **options
+    end
   end
 
   private
@@ -19,6 +23,10 @@ module Authentication
 
     def require_authentication
       resume_session || request_authentication
+    end
+
+    def require_unauthenticated_user
+      redirect_to root_url if authenticated?
     end
 
     def resume_session
